<resources>
    <string name="app_name">TI Demo</string>

    <!-- Scan Activity -->
    <string name="btn_scan_text">Start Scan</string>
    <string name="btn_scan_stop_text">Stop Scanning</string>
    <string name="btn_scan_start_text">Start Scan</string>
    <string name="tv_scan_device_name">Name</string>
    <string name="tv_scan_device_mac_address">Address</string>
    <string name="tv_scan_is_scanning">Is Scanning</string>

    <!-- Tests Activity -->

    <!-- connect -->
    <string name="tv_device_is_connected">Is Connected</string>
    <string name="btn_connect_text">Connect</string>
    <string name="btn_disconnect_text">Disconnect</string>
    <string name="tv_device_send_event_title">Events</string>

    <!-- events -->
    <string name="edt_hint_event_name">Enter event name…</string>
    <string name="edt_hint_event_type">Enter event type…</string>
    <string name="edt_hint_event_data">Enter event data…</string>
    <string name="btn_events_send_event">Send Event</string>

    <!-- IR Temperature -->
    <string name="tv_device_ir_temperature_title">IR Temperature</string>
    <string name="btn_device_ir_temp_read">Read IR Temperature</string>
    <string name="tv_device_ir_temp_read">IR Temperature</string>
    <string name="tv_device_temperature_ambient_read">Ambient</string>
    <string name="tv_device_ir_temp_notif">IR Temperature</string>
    <string name="tv_device_ir_ambient_notif">Ambient</string>

    <!-- humidity -->
    <string name="tv_device_humidity_title">Humidity and Temperature</string>
    <string name="btn_device_humid_read">Read Humidity and Temperature</string>
    <string name="tv_device_humid_temp_read">Temperature</string>
    <string name="tv_device_humidity_read">Humidity</string>
    <string name="tv_device_humid_temp_notif">Temperature</string>
    <string name="tv_device_humidity_notif">Humidity</string>

    <!-- notifications -->
    <string name="btn_device_stop_notifications">Stop Notifications</string>
    <string name="btn_device_notification_start">Start Notifications</string>
    <string name="btn_device_notification_stop_listening">Stop Listening</string>

</resources>
