<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv_device_send_event_title"
        style="@style/subTitle"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_events_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_hint_event_name"
            style="@style/field"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_events_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_hint_event_type"
            style="@style/field"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_events_event_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_hint_event_data"
            style="@style/field"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_send_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_events_send_event"
        style="@style/button"
        />

</LinearLayout>